--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
 </head>
 <body class="bg-white text-gray-800">
 
-    <!-- Header & Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600">Labs</span></a>
+            <a href="index.html" class="flex items-center space-x-3">
+                <div style="width: 40px; height: 40px; background-color: #dc2626; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; font-size: 1.25rem; letter-spacing: -1px; flex-shrink: 0;">
+                  SW
+                </div>
+                <span class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600 font-normal">Labs</span></span>
+            </a>
             <nav class="hidden md:flex space-x-8">
                 <a href="index.html" class="text-red-600 font-semibold border-b-2 border-red-600">Home</a>
                 <a href="about.html" class="text-gray-600 hover:text-red-600 transition-colors">About</a>
                 <a href="projects.html" class="text-gray-600 hover:text-red-600 transition-colors">Projects</a>
                 <a href="contact.html" class="text-gray-600 hover:text-red-600 transition-colors">Contact</a>
             </nav>
-            <!-- Mobile Menu Button -->
             <button id="mobile-menu-button" class="md:hidden text-gray-800">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </button>
         </div>
-        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
             <a href="index.html" class="block py-2 text-red-600 font-semibold">Home</a>
             <a href="about.html" class="block py-2 text-gray-600 hover:text-red-600">About</a>
@@ -40,7 +42,6 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
         <section class="bg-hero text-white">
             <div class="container mx-auto px-6 py-24 text-center">
                 <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">Crafting Data Solutions, Building Digital Experiences.</h1>
@@ -49,7 +50,6 @@
             </div>
         </section>
 
-        <!-- What We Do Section -->
         <section class="py-20 bg-gray-50">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
@@ -57,7 +57,6 @@
                     <p class="text-gray-600 mt-2">A fusion of expert craftsmanship and modern innovation.</p>
                 </div>
                 <div class="grid md:grid-cols-3 gap-8 text-center">
-                    <!-- Feature 1 -->
                     <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <div class="bg-red-100 text-red-600 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6">
                             <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4"></path><path d="M4 12h16"></path></svg>
@@ -65,7 +64,6 @@
                         <h3 class="text-xl font-bold mb-2">Data Integration & ETL</h3>
                         <p class="text-gray-600">Robust, scalable solutions for data transformation, migration, and automation, specializing in SSIS and SQL.</p>
                     </div>
-                    <!-- Feature 2 -->
                     <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                          <div class="bg-red-100 text-red-600 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6">
                             <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
@@ -73,7 +71,6 @@
                         <h3 class="text-xl font-bold mb-2">Custom Applications</h3>
                         <p class="text-gray-600">Desktop and web applications built with C# and modern frameworks to solve unique business challenges.</p>
                     </div>
-                    <!-- Feature 3 -->
                     <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <div class="bg-red-100 text-red-600 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6">
                             <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
@@ -86,7 +83,6 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <p>&copy; 2025 Stewart Datawright Labs. All Rights Reserved.</p>
