--- a/about.html
+++ b/about.html
@@ -14,22 +14,24 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-    <!-- Header & Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600">Labs</span></a>
+            <a href="index.html" class="flex items-center space-x-3">
+                <div style="width: 40px; height: 40px; background-color: #dc2626; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; font-size: 1.25rem; letter-spacing: -1px; flex-shrink: 0;">
+                  SW
+                </div>
+                <span class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600 font-normal">Labs</span></span>
+            </a>
             <nav class="hidden md:flex space-x-8">
                 <a href="index.html" class="text-gray-600 hover:text-red-600 transition-colors">Home</a>
                 <a href="about.html" class="text-red-600 font-semibold border-b-2 border-red-600">About</a>
                 <a href="projects.html" class="text-gray-600 hover:text-red-600 transition-colors">Projects</a>
                 <a href="contact.html" class="text-gray-600 hover:text-red-600 transition-colors">Contact</a>
             </nav>
-            <!-- Mobile Menu Button -->
             <button id="mobile-menu-button" class="md:hidden text-gray-800">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </button>
         </div>
-        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
             <a href="index.html" class="block py-2 text-gray-600 hover:text-red-600">Home</a>
             <a href="about.html" class="block py-2 text-red-600 font-semibold">About</a>
@@ -42,7 +44,6 @@
         <div class="max-w-4xl mx-auto">
             <h1 class="text-4xl md:text-5xl font-bold text-center mb-12">About Stewart Datawright Labs</h1>
 
-            <!-- Our Mission Section -->
             <div class="bg-white p-8 rounded-lg shadow-md mb-12">
                 <h2 class="text-3xl font-bold mb-4">Our Mission</h2>
                 <p class="text-lg text-gray-700 leading-relaxed">
@@ -50,13 +51,11 @@
                 </p>
             </div>
 
-            <!-- The Founder Section -->
             <div class="bg-white p-8 rounded-lg shadow-md">
                 <h2 class="text-3xl font-bold mb-4">The Founder</h2>
                 <div class="md:flex md:items-center">
                     <div class="md:w-1/3 text-center mb-6 md:mb-0">
-                        <!-- Placeholder for a founder photo -->
-                        <img src="https://placehold.co/200x200/e2e8f0/4a5568?text=RS" alt="Robert Stewart" class="rounded-full w-48 h-48 mx-auto shadow-lg">
+                        <img src="robert-stewart-headshot.png" alt="Robert Stewart" class="rounded-full w-48 h-48 mx-auto shadow-lg object-cover">
                     </div>
                     <div class="md:w-2/3 md:pl-8">
                         <h3 class="text-2xl font-bold text-gray-900">Robert Stewart</h3>
@@ -73,7 +72,6 @@
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <p>&copy; 2025 Stewart Datawright Labs. All Rights Reserved.</p>
