--- a/projects.html
+++ b/projects.html
@@ -14,22 +14,24 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-    <!-- Header & Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600">Labs</span></a>
+            <a href="index.html" class="flex items-center space-x-3">
+                <div style="width: 40px; height: 40px; background-color: #dc2626; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; font-size: 1.25rem; letter-spacing: -1px; flex-shrink: 0;">
+                  SW
+                </div>
+                <span class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600 font-normal">Labs</span></span>
+            </a>
             <nav class="hidden md:flex space-x-8">
                 <a href="index.html" class="text-gray-600 hover:text-red-600 transition-colors">Home</a>
                 <a href="about.html" class="text-gray-600 hover:text-red-600 transition-colors">About</a>
                 <a href="projects.html" class="text-red-600 font-semibold border-b-2 border-red-600">Projects</a>
                 <a href="contact.html" class="text-gray-600 hover:text-red-600 transition-colors">Contact</a>
             </nav>
-            <!-- Mobile Menu Button -->
             <button id="mobile-menu-button" class="md:hidden text-gray-800">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </button>
         </div>
-        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
             <a href="index.html" class="block py-2 text-gray-600 hover:text-red-600">Home</a>
             <a href="about.html" class="block py-2 text-gray-600 hover:text-red-600">About</a>
@@ -44,10 +46,8 @@
             <p class="text-gray-600 mt-2">A selection of projects from the lab.</p>
         </div>
 
-        <!-- Projects Grid -->
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
             
-            <!-- Project Card 1 (Placeholder) -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden group">
                 <img src="https://placehold.co/600x400/ef4444/ffffff?text=Project+1" alt="Project 1" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity">
                 <div class="p-6">
@@ -57,7 +57,6 @@
                 </div>
             </div>
 
-            <!-- Project Card 2 (Placeholder) -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden group">
                 <img src="https://placehold.co/600x400/3b82f6/ffffff?text=Project+2" alt="Project 2" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity">
                 <div class="p-6">
@@ -67,7 +66,6 @@
                 </div>
             </div>
 
-            <!-- Project Card 3 (Placeholder) -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden group">
                 <img src="https://placehold.co/600x400/10b981/ffffff?text=Project+3" alt="Project 3" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity">
                 <div class="p-6">
@@ -77,12 +75,9 @@
                 </div>
             </div>
 
-            <!-- Add more project cards as you create them -->
-
-        </div>
+            </div>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <p>&copy; 2025 Stewart Datawright Labs. All Rights Reserved.</p>
