--- a/about.html
+++ b/about.html
@@ -1,89 +1,146 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Stewart Datawright Labs</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>About — Stewart Datawright Labs</title>
+  <meta name="description" content="Learn more about Stewart Datawright Labs, founded by Robert Stewart. Specializing in data integration, ETL, custom apps, and mobile utilities.">
+  <meta property="og:title" content="About — Stewart Datawright Labs">
+  <meta property="og:description" content="Data solutions crafted by Robert Stewart — founder, engineer, and software craftsman.">
+  <meta property="og:type" content="website">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    :root { --brand: #dc2626; }
+    html,body { font-family: 'Inter', system-ui, sans-serif; }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-white text-slate-800">
 
-    <header class="bg-white shadow-sm sticky top-0 z-50">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-3">
-                <div style="width: 40px; height: 40px; background-color: #dc2626; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; font-size: 1.25rem; letter-spacing: -1px; flex-shrink: 0;">
-                  SW
-                </div>
-                <span class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600 font-normal">Labs</span></span>
-            </a>
-            <nav class="hidden md:flex space-x-8">
-                <a href="index.html" class="text-gray-600 hover:text-red-600 transition-colors">Home</a>
-                <a href="about.html" class="text-red-600 font-semibold border-b-2 border-red-600">About</a>
-                <a href="projects.html" class="text-gray-600 hover:text-red-600 transition-colors">Projects</a>
-                <a href="contact.html" class="text-gray-600 hover:text-red-600 transition-colors">Contact</a>
-            </nav>
-            <button id="mobile-menu-button" class="md:hidden text-gray-800">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
+  <!-- Header -->
+  <header class="sticky top-0 z-40 bg-white/90 backdrop-blur-sm shadow-sm">
+    <div class="max-w-6xl mx-auto px-6 py-3 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-4">
+        <img src="Stewart Datawright Labs Logo.png" alt="Stewart Datawright Labs logo" class="h-12 w-auto object-contain">
+        <span class="hidden sm:inline-block font-semibold">Stewart Datawright Labs</span>
+      </a>
+      <nav class="hidden md:flex items-center gap-6">
+        <a href="index.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Home</a>
+        <a href="about.html" class="text-sm font-medium text-[var(--brand)]">About</a>
+        <a href="projects.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Projects</a>
+        <a href="contact.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Contact</a>
+      </nav>
+      <div class="flex items-center gap-3">
+        <a href="contact.html" class="hidden md:inline-block text-sm font-semibold px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)] hover:bg-[var(--brand)] hover:text-white transition">Work with us</a>
+        <button id="mobile-toggle" class="md:hidden p-2 rounded-md" aria-label="Open menu">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+        </button>
+      </div>
+    </div>
+    <div id="mobile-menu" class="md:hidden hidden border-t">
+      <div class="px-6 pb-6 space-y-2">
+        <a href="index.html" class="block py-2 text-sm font-medium">Home</a>
+        <a href="about.html" class="block py-2 text-sm font-medium text-[var(--brand)]">About</a>
+        <a href="projects.html" class="block py-2 text-sm font-medium">Projects</a>
+        <a href="contact.html" class="block py-2 text-sm font-medium">Contact</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Main -->
+  <main id="main-content">
+    <section class="bg-gradient-to-b from-slate-900 to-slate-800 text-white py-16">
+      <div class="max-w-4xl mx-auto px-6">
+        <h1 class="text-3xl md:text-4xl font-extrabold">About Stewart Datawright Labs</h1>
+        <p class="mt-4 text-slate-200">Founded by Robert Stewart, Stewart Datawright Labs is dedicated to crafting reliable, maintainable software and data systems. Our goal: to transform raw data into actionable insight, and ideas into working applications.</p>
+      </div>
+    </section>
+
+    <section class="max-w-4xl mx-auto px-6 py-16 space-y-12">
+      <div class="flex flex-col md:flex-row items-start gap-8">
+        <img src="robert-stewart-headshot.png" alt="Robert Stewart headshot" class="rounded-xl w-48 h-48 object-cover shadow-lg">
+        <div>
+          <h2 class="text-2xl font-bold">Robert Stewart — Founder & Data Engineer</h2>
+          <p class="mt-4 text-slate-700">Robert has over a decade of experience working with data integration, ETL processes, and custom application development. His background in C#, SQL, and SSIS has helped companies streamline workflows, improve data accuracy, and unlock new possibilities for their operations.</p>
+          <p class="mt-4 text-slate-700">Beyond technical skill, Robert believes in clear communication, thorough documentation, and creating solutions that stand the test of time. Whether building desktop utilities, mobile add-ons, or complete data platforms, he approaches each project with a craftsman’s mindset.</p>
         </div>
-        <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
-            <a href="index.html" class="block py-2 text-gray-600 hover:text-red-600">Home</a>
-            <a href="about.html" class="block py-2 text-red-600 font-semibold">About</a>
-            <a href="projects.html" class="block py-2 text-gray-600 hover:text-red-600">Projects</a>
-            <a href="contact.html" class="block py-2 text-gray-600 hover:text-red-600">Contact</a>
-        </div>
-    </header>
+      </div>
 
-    <main class="container mx-auto px-6 py-20">
-        <div class="max-w-4xl mx-auto">
-            <h1 class="text-4xl md:text-5xl font-bold text-center mb-12">About Stewart Datawright Labs</h1>
-            <div class="bg-white p-8 rounded-lg shadow-md mb-12">
-                <h2 class="text-3xl font-bold mb-4">Our Mission</h2>
-                <p class="text-lg text-gray-700 leading-relaxed">
-                    At Stewart Datawright Labs, we believe that well-crafted software is a form of modern craftsmanship. Our mission is to build digital tools that are not only powerful and efficient but also elegant and intuitive. Whether we're architecting a complex data system or designing a simple mobile utility, we are driven by a passion for quality, precision, and solving real-world problems through technology.
-                </p>
-            </div>
-            <div class="bg-white p-8 rounded-lg shadow-md">
-                <h2 class="text-3xl font-bold mb-4">The Founder</h2>
-                <div class="md:flex md:items-center">
-                    <div class="md:w-1/3 text-center mb-6 md:mb-0">
-                        <img src="robert-stewart-headshot.png" alt="Robert Stewart" class="rounded-full w-48 h-48 mx-auto shadow-lg object-cover">
-                    </div>
-                    <div class="md:w-2/3 md:pl-8">
-                        <h3 class="text-2xl font-bold text-gray-900">Robert Stewart</h3>
-                        <p class="text-red-600 font-semibold mb-4">Founder & Lead Developer</p>
-                        <p class="text-gray-700 mb-4">
-                            Robert is a technologist with a Master's degree in Computer Science Software Engineering and extensive professional experience as an IT Applications Administrator. With deep expertise in C#, SQL, and SSIS, he has spent years architecting and engineering complex ETL solutions and back-office tools.
-                        </p>
-                        <p class="text-gray-700">
-                            His passion for technology extends beyond his professional life into PC building, smart home automation, and gaming. Stewart Datawright Labs was founded to merge this lifelong passion with his professional expertise, creating a studio dedicated to building high-quality software for all platforms.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+      <div>
+        <h2 class="text-xl font-bold">Our Values</h2>
+        <ul class="mt-4 grid sm:grid-cols-2 gap-6">
+          <li class="p-4 border rounded-lg">
+            <h3 class="font-semibold">Reliability</h3>
+            <p class="text-sm text-slate-600 mt-1">Software and systems that work when you need them — no surprises, no drama.</p>
+          </li>
+          <li class="p-4 border rounded-lg">
+            <h3 class="font-semibold">Clarity</h3>
+            <p class="text-sm text-slate-600 mt-1">From requirements to delivery, we value transparency and clear communication.</p>
+          </li>
+          <li class="p-4 border rounded-lg">
+            <h3 class="font-semibold">Craftsmanship</h3>
+            <p class="text-sm text-slate-600 mt-1">Attention to detail in both code and user experience for long-term maintainability.</p>
+          </li>
+          <li class="p-4 border rounded-lg">
+            <h3 class="font-semibold">Partnership</h3>
+            <p class="text-sm text-slate-600 mt-1">Working alongside clients as a trusted partner, not just a vendor.</p>
+          </li>
+        </ul>
+      </div>
 
-    <footer class="bg-gray-800 text-white">
-        <div class="container mx-auto px-6 py-8 text-center">
-            <p>&copy; 2025 Stewart Datawright Labs. All Rights Reserved.</p>
-            <p class="text-sm text-gray-400 mt-2">A modern software studio.</p>
-        </div>
-    </footer>
+      <div>
+        <h2 class="text-xl font-bold">Tech Stack</h2>
+        <p class="mt-2 text-slate-700">We use proven, industry-standard technologies to deliver dependable results:</p>
+        <ul class="mt-4 grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm text-slate-600">
+          <li><strong class="text-slate-800">Languages:</strong> C#, SQL</li>
+          <li><strong class="text-slate-800">Tools:</strong> SSIS, Visual Studio</li>
+          <li><strong class="text-slate-800">Databases:</strong> SQL Server, MySQL</li>
+          <li><strong class="text-slate-800">Platforms:</strong> Windows, Web, Mobile</li>
+          <li><strong class="text-slate-800">Approaches:</strong> ETL, Data Warehousing</li>
+          <li><strong class="text-slate-800">Other:</strong> Git, REST APIs</li>
+        </ul>
+      </div>
+    </section>
 
-    <script>
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-    </script>
+    <section class="bg-gray-50 py-12">
+      <div class="max-w-4xl mx-auto px-6 text-center">
+        <h2 class="text-2xl font-bold">Want to work together?</h2>
+        <p class="mt-2 text-slate-700">If you have a project in mind, let’s talk about how we can bring it to life.</p>
+        <a href="contact.html" class="inline-block mt-4 bg-[var(--brand)] text-white font-semibold px-5 py-3 rounded-md shadow hover:scale-[1.02] transition">Contact us</a>
+      </div>
+    </section>
+  </main>
 
+  <!-- Footer -->
+  <footer class="bg-slate-900 text-slate-200">
+    <div class="max-w-6xl mx-auto px-6 py-12 grid md:grid-cols-3 gap-6">
+      <div>
+        <h4 class="font-bold text-white">Stewart Datawright Labs</h4>
+        <p class="text-sm mt-2">Crafting reliable software and data systems. <br>Robert Stewart — Founder</p>
+      </div>
+      <div>
+        <h5 class="font-semibold">Quick Links</h5>
+        <ul class="mt-3 text-sm space-y-2">
+          <li><a href="about.html" class="hover:underline">About</a></li>
+          <li><a href="projects.html" class="hover:underline">Projects</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="font-semibold">Contact</h5>
+        <p class="text-sm mt-2">Email: <a href="mailto:hello@stewartdatalabs.com" class="underline">hello@stewartdatalabs.com</a></p>
+        <p class="text-sm mt-1">© 2025 Stewart Datawright Labs</p>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    const mobileToggle = document.getElementById('mobile-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
+    mobileToggle?.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
+  </script>
 </body>
 </html>
