--- a/contact.html
+++ b/contact.html
@@ -1,89 +1,124 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Stewart Datawright Labs</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Contact — Stewart Datawright Labs</title>
+  <meta name="description" content="Contact Stewart Datawright Labs to discuss your data or software project. Get in touch with Robert Stewart today.">
+  <meta property="og:title" content="Contact — Stewart Datawright Labs">
+  <meta property="og:description" content="Let’s talk about your project. We specialize in data integration, ETL, custom apps, and mobile utilities.">
+  <meta property="og:type" content="website">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    :root { --brand: #dc2626; }
+    html,body { font-family: 'Inter', system-ui, sans-serif; }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-white text-slate-800">
 
-    <header class="bg-white shadow-sm sticky top-0 z-50">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-3">
-                <div style="width: 40px; height: 40px; background-color: #dc2626; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; font-size: 1.25rem; letter-spacing: -1px; flex-shrink: 0;">
-                  SW
-                </div>
-                <span class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600 font-normal">Labs</span></span>
-            </a>
-            <nav class="hidden md:flex space-x-8">
-                <a href="index.html" class="text-gray-600 hover:text-red-600 transition-colors">Home</a>
-                <a href="about.html" class="text-gray-600 hover:text-red-600 transition-colors">About</a>
-                <a href="projects.html" class="text-gray-600 hover:text-red-600 transition-colors">Projects</a>
-                <a href="contact.html" class="text-red-600 font-semibold border-b-2 border-red-600">Contact</a>
-            </nav>
-            <button id="mobile-menu-button" class="md:hidden text-gray-800">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
-        </div>
-        <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
-            <a href="index.html" class="block py-2 text-gray-600 hover:text-red-600">Home</a>
-            <a href="about.html" class="block py-2 text-gray-600 hover:text-red-600">About</a>
-            <a href="projects.html" class="block py-2 text-gray-600 hover:text-red-600">Projects</a>
-            <a href="contact.html" class="block py-2 text-red-600 font-semibold">Contact</a>
-        </div>
-    </header>
+  <!-- Header -->
+  <header class="sticky top-0 z-40 bg-white/90 backdrop-blur-sm shadow-sm">
+    <div class="max-w-6xl mx-auto px-6 py-3 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-4">
+        <img src="Stewart Datawright Labs Logo.png" alt="Stewart Datawright Labs logo" class="h-12 w-auto object-contain">
+        <span class="hidden sm:inline-block font-semibold">Stewart Datawright Labs</span>
+      </a>
+      <nav class="hidden md:flex items-center gap-6">
+        <a href="index.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Home</a>
+        <a href="about.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">About</a>
+        <a href="projects.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Projects</a>
+        <a href="contact.html" class="text-sm font-medium text-[var(--brand)]">Contact</a>
+      </nav>
+      <div class="flex items-center gap-3">
+        <a href="contact.html" class="hidden md:inline-block text-sm font-semibold px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)] hover:bg-[var(--brand)] hover:text-white transition">Work with us</a>
+        <button id="mobile-toggle" class="md:hidden p-2 rounded-md" aria-label="Open menu">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+        </button>
+      </div>
+    </div>
+    <div id="mobile-menu" class="md:hidden hidden border-t">
+      <div class="px-6 pb-6 space-y-2">
+        <a href="index.html" class="block py-2 text-sm font-medium">Home</a>
+        <a href="about.html" class="block py-2 text-sm font-medium">About</a>
+        <a href="projects.html" class="block py-2 text-sm font-medium">Projects</a>
+        <a href="contact.html" class="block py-2 text-sm font-medium text-[var(--brand)]">Contact</a>
+      </div>
+    </div>
+  </header>
 
-    <main class="container mx-auto px-6 py-20">
-        <div class="max-w-2xl mx-auto">
-            <div class="text-center mb-12">
-                <h1 class="text-4xl md:text-5xl font-bold">Get In Touch</h1>
-                <p class="text-gray-600 mt-2">Have a project in mind or just want to say hello? We'd love to hear from you.</p>
-            </div>
-            <div class="bg-white p-8 rounded-lg shadow-md">
-                <form action="#" method="POST">
-                    <div class="mb-6">
-                        <label for="name" class="block text-gray-700 font-bold mb-2">Full Name</label>
-                        <input type="text" id="name" name="name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="Robert Stewart" required>
-                    </div>
-                    <div class="mb-6">
-                        <label for="email" class="block text-gray-700 font-bold mb-2">Email Address</label>
-                        <input type="email" id="email" name="email" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="you@example.com" required>
-                    </div>
-                    <div class="mb-6">
-                        <label for="message" class="block text-gray-700 font-bold mb-2">Message</label>
-                        <textarea id="message" name="message" rows="5" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="Tell us about your project or inquiry..." required></textarea>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="bg-red-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-red-700 transition-transform transform hover:scale-105">
-                            Send Message
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </main>
+  <!-- Main -->
+  <main id="main-content">
+    <section class="bg-gradient-to-b from-slate-900 to-slate-800 text-white py-16">
+      <div class="max-w-4xl mx-auto px-6 text-center">
+        <h1 class="text-3xl md:text-4xl font-extrabold">Contact Us</h1>
+        <p class="mt-4 text-slate-200">Have a project in mind? Let’s discuss how we can help you build reliable data systems and applications.</p>
+      </div>
+    </section>
 
-    <footer class="bg-gray-800 text-white">
-        <div class="container mx-auto px-6 py-8 text-center">
-            <p>&copy; 2025 Stewart Datawright Labs. All Rights Reserved.</p>
-            <p class="text-sm text-gray-400 mt-2">A modern software studio.</p>
-        </div>
-    </footer>
+    <section class="max-w-4xl mx-auto px-6 py-16 grid md:grid-cols-2 gap-12">
+      <!-- Contact Info -->
+      <div>
+        <h2 class="text-xl font-bold">Get in Touch</h2>
+        <p class="mt-4 text-slate-700">You can reach us directly via email or the contact form. We aim to respond within 1–2 business days.</p>
+        <ul class="mt-6 space-y-3 text-sm text-slate-600">
+          <li><strong class="text-slate-800">Email:</strong> <a href="mailto:hello@stewartdatalabs.com" class="underline">hello@stewartdatalabs.com</a></li>
+          <li><strong class="text-slate-800">Location:</strong> Based in the United States — working with clients worldwide.</li>
+        </ul>
+      </div>
 
-    <script>
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-    </script>
+      <!-- Contact Form -->
+      <div>
+        <h2 class="text-xl font-bold">Send a Message</h2>
+        <form action="https://formspree.io/f/your-form-id" method="POST" class="mt-4 space-y-4">
+          <div>
+            <label for="name" class="block text-sm font-medium text-slate-700">Name</label>
+            <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md border-slate-300 shadow-sm focus:border-[var(--brand)] focus:ring-[var(--brand)]">
+          </div>
+          <div>
+            <label for="email" class="block text-sm font-medium text-slate-700">Email</label>
+            <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md border-slate-300 shadow-sm focus:border-[var(--brand)] focus:ring-[var(--brand)]">
+          </div>
+          <div>
+            <label for="message" class="block text-sm font-medium text-slate-700">Message</label>
+            <textarea id="message" name="message" rows="4" required class="mt-1 block w-full rounded-md border-slate-300 shadow-sm focus:border-[var(--brand)] focus:ring-[var(--brand)]"></textarea>
+          </div>
+          <button type="submit" class="bg-[var(--brand)] text-white font-semibold px-5 py-3 rounded-md shadow hover:scale-[1.02] transition">Send Message</button>
+        </form>
+      </div>
+    </section>
+  </main>
 
+  <!-- Footer -->
+  <footer class="bg-slate-900 text-slate-200">
+    <div class="max-w-6xl mx-auto px-6 py-12 grid md:grid-cols-3 gap-6">
+      <div>
+        <h4 class="font-bold text-white">Stewart Datawright Labs</h4>
+        <p class="text-sm mt-2">Crafting reliable software and data systems. <br>Robert Stewart — Founder</p>
+      </div>
+      <div>
+        <h5 class="font-semibold">Quick Links</h5>
+        <ul class="mt-3 text-sm space-y-2">
+          <li><a href="about.html" class="hover:underline">About</a></li>
+          <li><a href="projects.html" class="hover:underline">Projects</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="font-semibold">Contact</h5>
+        <p class="text-sm mt-2">Email: <a href="mailto:hello@stewartdatalabs.com" class="underline">hello@stewartdatalabs.com</a></p>
+        <p class="text-sm mt-1">© 2025 Stewart Datawright Labs</p>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    const mobileToggle = document.getElementById('mobile-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
+    mobileToggle?.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
+  </script>
 </body>
 </html>
