--- a/projects.html
+++ b/projects.html
@@ -1,98 +1,124 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Stewart Datawright Labs</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Projects — Stewart Datawright Labs</title>
+  <meta name="description" content="Explore selected projects by Stewart Datawright Labs — from ETL automation to mobile apps and custom software.">
+  <meta property="og:title" content="Projects — Stewart Datawright Labs">
+  <meta property="og:description" content="A selection of data, app, and mobile projects built by Robert Stewart.">
+  <meta property="og:type" content="website">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    :root { --brand: #dc2626; }
+    html,body { font-family: 'Inter', system-ui, sans-serif; }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-white text-slate-800">
 
-    <header class="bg-white shadow-sm sticky top-0 z-50">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-3">
-                <div style="width: 40px; height: 40px; background-color: #dc2626; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; font-size: 1.25rem; letter-spacing: -1px; flex-shrink: 0;">
-                  SW
-                </div>
-                <span class="text-2xl font-bold text-gray-900">Stewart Datawright <span class="text-red-600 font-normal">Labs</span></span>
-            </a>
-            <nav class="hidden md:flex space-x-8">
-                <a href="index.html" class="text-gray-600 hover:text-red-600 transition-colors">Home</a>
-                <a href="about.html" class="text-gray-600 hover:text-red-600 transition-colors">About</a>
-                <a href="projects.html" class="text-red-600 font-semibold border-b-2 border-red-600">Projects</a>
-                <a href="contact.html" class="text-gray-600 hover:text-red-600 transition-colors">Contact</a>
-            </nav>
-            <button id="mobile-menu-button" class="md:hidden text-gray-800">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
+  <!-- Header -->
+  <header class="sticky top-0 z-40 bg-white/90 backdrop-blur-sm shadow-sm">
+    <div class="max-w-6xl mx-auto px-6 py-3 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-4">
+        <img src="Stewart Datawright Labs Logo.png" alt="Stewart Datawright Labs logo" class="h-12 w-auto object-contain">
+        <span class="hidden sm:inline-block font-semibold">Stewart Datawright Labs</span>
+      </a>
+      <nav class="hidden md:flex items-center gap-6">
+        <a href="index.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Home</a>
+        <a href="about.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">About</a>
+        <a href="projects.html" class="text-sm font-medium text-[var(--brand)]">Projects</a>
+        <a href="contact.html" class="text-sm font-medium text-slate-700 hover:text-[var(--brand)]">Contact</a>
+      </nav>
+      <div class="flex items-center gap-3">
+        <a href="contact.html" class="hidden md:inline-block text-sm font-semibold px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)] hover:bg-[var(--brand)] hover:text-white transition">Work with us</a>
+        <button id="mobile-toggle" class="md:hidden p-2 rounded-md" aria-label="Open menu">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+        </button>
+      </div>
+    </div>
+    <div id="mobile-menu" class="md:hidden hidden border-t">
+      <div class="px-6 pb-6 space-y-2">
+        <a href="index.html" class="block py-2 text-sm font-medium">Home</a>
+        <a href="about.html" class="block py-2 text-sm font-medium">About</a>
+        <a href="projects.html" class="block py-2 text-sm font-medium text-[var(--brand)]">Projects</a>
+        <a href="contact.html" class="block py-2 text-sm font-medium">Contact</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="bg-gradient-to-b from-slate-900 to-slate-800 text-white py-16">
+    <div class="max-w-4xl mx-auto px-6 text-center">
+      <h1 class="text-3xl md:text-4xl font-extrabold">Our Work</h1>
+      <p class="mt-4 text-slate-200">A selection of recent projects — combining reliable engineering with thoughtful design.</p>
+    </div>
+  </section>
+
+  <!-- Projects Grid -->
+  <main class="max-w-6xl mx-auto px-6 py-16">
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+      <article class="bg-white rounded-lg border shadow-sm overflow-hidden hover:shadow-md transition">
+        <img src="https://placehold.co/600x400/ef4444/ffffff?text=Project+1" alt="ETL Automation Suite screenshot" class="w-full h-48 object-cover">
+        <div class="p-6">
+          <h3 class="text-lg font-semibold">ETL Automation Suite</h3>
+          <p class="text-sm text-slate-600 mt-2">A powerful toolkit for orchestrating and monitoring SSIS packages — cutting execution times by 40%.</p>
+          <a href="#" class="inline-block mt-4 text-[var(--brand)] text-sm font-semibold hover:underline">Learn more →</a>
         </div>
-        <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
-            <a href="index.html" class="block py-2 text-gray-600 hover:text-red-600">Home</a>
-            <a href="about.html" class="block py-2 text-gray-600 hover:text-red-600">About</a>
-            <a href="projects.html" class="block py-2 text-red-600 font-semibold">Projects</a>
-            <a href="contact.html" class="block py-2 text-gray-600 hover:text-red-600">Contact</a>
+      </article>
+
+      <article class="bg-white rounded-lg border shadow-sm overflow-hidden hover:shadow-md transition">
+        <img src="https://placehold.co/600x400/3b82f6/ffffff?text=Project+2" alt="Smart Home Dashboard screenshot" class="w-full h-48 object-cover">
+        <div class="p-6">
+          <h3 class="text-lg font-semibold">Smart Home Dashboard</h3>
+          <p class="text-sm text-slate-600 mt-2">An intuitive iOS/Android app that unifies control of multiple smart home systems with real-time feedback.</p>
+          <a href="#" class="inline-block mt-4 text-[var(--brand)] text-sm font-semibold hover:underline">Learn more →</a>
         </div>
-    </header>
+      </article>
 
-    <main class="container mx-auto px-6 py-20">
-        <div class="text-center mb-12">
-            <h1 class="text-4xl md:text-5xl font-bold">Our Work</h1>
-            <p class="text-gray-600 mt-2">A selection of projects from the lab.</p>
+      <article class="bg-white rounded-lg border shadow-sm overflow-hidden hover:shadow-md transition">
+        <img src="https://placehold.co/600x400/10b981/ffffff?text=Project+3" alt="Pixel Raiders game screenshot" class="w-full h-48 object-cover">
+        <div class="p-6">
+          <h3 class="text-lg font-semibold">Pixel Raiders (Game)</h3>
+          <p class="text-sm text-slate-600 mt-2">A retro-inspired RTS game for PC, blending nostalgia with modern multiplayer features.</p>
+          <a href="#" class="inline-block mt-4 text-[var(--brand)] text-sm font-semibold hover:underline">Learn more →</a>
         </div>
+      </article>
 
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-            
-            <div class="bg-white rounded-lg shadow-md overflow-hidden group">
-                <img src="https://placehold.co/600x400/ef4444/ffffff?text=Project+1" alt="Project 1" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity">
-                <div class="p-6">
-                    <h3 class="text-xl font-bold mb-2">ETL Automation Suite</h3>
-                    <p class="text-gray-700 mb-4">A powerful tool designed to streamline complex SSIS package execution and monitoring for enterprise clients.</p>
-                    <a href="#" class="text-red-600 font-semibold hover:underline">Learn More &rarr;</a>
-                </div>
-            </div>
+    </div>
+  </main>
 
-            <div class="bg-white rounded-lg shadow-md overflow-hidden group">
-                <img src="https://placehold.co/600x400/3b82f6/ffffff?text=Project+2" alt="Project 2" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity">
-                <div class="p-6">
-                    <h3 class="text-xl font-bold mb-2">Smart Home Dashboard</h3>
-                    <p class="text-gray-700 mb-4">An intuitive mobile app for iOS and Android that unifies control of all your smart home devices in one place.</p>
-                    <a href="#" class="text-red-600 font-semibold hover:underline">Learn More &rarr;</a>
-                </div>
-            </div>
+  <!-- Footer -->
+  <footer class="bg-slate-900 text-slate-200">
+    <div class="max-w-6xl mx-auto px-6 py-12 grid md:grid-cols-3 gap-6">
+      <div>
+        <h4 class="font-bold text-white">Stewart Datawright Labs</h4>
+        <p class="text-sm mt-2">Crafting reliable software and data systems. <br>Robert Stewart — Founder</p>
+      </div>
+      <div>
+        <h5 class="font-semibold">Quick Links</h5>
+        <ul class="mt-3 text-sm space-y-2">
+          <li><a href="about.html" class="hover:underline">About</a></li>
+          <li><a href="projects.html" class="hover:underline">Projects</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="font-semibold">Contact</h5>
+        <p class="text-sm mt-2">Email: <a href="mailto:hello@stewartdatalabs.com" class="underline">hello@stewartdatalabs.com</a></p>
+        <p class="text-sm mt-1">© 2025 Stewart Datawright Labs</p>
+      </div>
+    </div>
+  </footer>
 
-            <div class="bg-white rounded-lg shadow-md overflow-hidden group">
-                <img src="https://placehold.co/600x400/10b981/ffffff?text=Project+3" alt="Project 3" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity">
-                <div class="p-6">
-                    <h3 class="text-xl font-bold mb-2">Pixel Raiders (Game)</h3>
-                    <p class="text-gray-700 mb-4">A retro-inspired real-time strategy game for PC, paying homage to classics like Command & Conquer.</p>
-                    <a href="#" class="text-red-600 font-semibold hover:underline">Learn More &rarr;</a>
-                </div>
-            </div>
-
-            </div>
-    </main>
-
-    <footer class="bg-gray-800 text-white">
-        <div class="container mx-auto px-6 py-8 text-center">
-            <p>&copy; 2025 Stewart Datawright Labs. All Rights Reserved.</p>
-            <p class="text-sm text-gray-400 mt-2">A modern software studio.</p>
-        </div>
-    </footer>
-
-    <script>
-        // JavaScript for mobile menu toggle
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-    </script>
-
+  <script>
+    const mobileToggle = document.getElementById('mobile-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
+    mobileToggle?.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
+  </script>
 </body>
 </html>
